<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#11a18c"
    android:orientation="vertical"
    android:paddingTop="10dp"
    tools:context="com.example.rennan.neoedu.CadastrarActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->


    <ImageView
        android:id="@+id/imgFlat"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:contentDescription=""
        android:paddingBottom="20dp"
        android:paddingLeft="55dp"
        android:paddingRight="50dp"
        android:paddingTop="10dp"
        app:srcCompat="@mipmap/flat"
        tools:ignore="ContentDescription" />

    <ScrollView
        android:id="@+id/registrar_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0.4"
        android:backgroundTint="@color/colorPrimary"
        android:paddingBottom="5dp"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:id="@+id/user_login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:weightSum="1"
            tools:ignore="ScrollViewSize">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColorHint="@android:color/background_light">

                <EditText
                    android:id="@+id/edtNome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_name"
                    android:maxLines="1"
                    android:textColor="@android:color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColorHint="@android:color/background_light">

                <EditText
                    android:id="@+id/edtUsuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_user"
                    android:maxLines="1"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/background_light" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColorHint="@android:color/background_light">

                <AutoCompleteTextView
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:textColor="@android:color/background_light"
                    android:textColorHint="@android:color/background_light" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColorHint="@android:color/background_light">

                <EditText
                    android:id="@+id/edtPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/background_light"
                    android:textColorHighlight="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@android:color/background_light"
                    android:textCursorDrawable="@android:color/background_light" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:textColorHint="@android:color/background_light">

                <EditText
                    android:id="@+id/edtPassword2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Senha novamente"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:textColor="@android:color/background_light"
                    android:textColorHighlight="@android:color/background_light"
                    android:textColorHint="@android:color/background_light"
                    android:textColorLink="@android:color/background_light"
                    android:textCursorDrawable="@android:color/background_light" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnCadastrar"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="startNextActivity"
                android:text="@string/action_sign_in"
                android:textColor="@color/colorBack2"
                android:textColorLink="@android:color/background_light"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnVoltar"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:onClick="onClick"
                android:text="Voltar"
                android:textColor="@color/colorBack2"
                android:textColorLink="@android:color/background_light"
                android:textStyle="bold" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Large"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:paddingBottom="100dp"
        android:visibility="gone" />

</LinearLayout>